results/SVCOMP/conversational/log-StringBuilderCapLen02-2024_03_16_01_25_18.txt
public class StringBuilderCapLen02 {
    //@ requires arg != null;
    //@ ensures \result ==> (new StringBuilder(arg)).toString().equals("Diffblue  is leader in automatic test case generation");
    public static boolean f(String arg){
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.toString().equals("Diffblue  is leader in automatic test case generation");
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen02.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result ==> (new StringBuilder(arg)).toString().equals("Diffblue  is leader in automatic test case generation");
                             ^
1 error

public class StringBuilderCapLen02 {
    //@ requires arg != null;
    //@ ensures \result ==> arg.equals("Diffblue  is leader in automatic test case generation");
    public static boolean f(String arg){
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.toString().equals("Diffblue  is leader in automatic test case generation");
    }
}
